班级信息界面调整

--- a/app/src/main/res/layout/activity_students_list.xml
+++ b/app/src/main/res/layout/activity_students_list.xml
@@ -36,6 +36,7 @@
                 android:layout_marginTop="@dimen/px13"
                 android:layout_marginLeft="@dimen/px23"
                 android:layout_toRightOf="@id/veri_img"
+            android:layout_centerVertical="true"
                 />
 
         <TextView
@@ -46,6 +47,7 @@
                 android:textColor="@color/font_dark_gray"
                 android:layout_alignParentRight="true"
                 android:layout_alignBaseline="@id/veri_title"
+            android:visibility="gone"
                 />
 
         <TextView
@@ -58,6 +60,7 @@
                 android:layout_below="@id/veri_title"
                 android:layout_alignLeft="@id/veri_title"
                 android:layout_marginTop="@dimen/px16"
+            android:visibility="gone"
                 />
 
 
