--- a/app/src/main/res/layout/activity_classroom.xml
+++ b/app/src/main/res/layout/activity_classroom.xml
@@ -52,6 +52,14 @@
 
     </FrameLayout>
 
+    <FrameLayout
+            android:id="@+id/class_canlender_layout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+    </FrameLayout>
+
+
     <TextView
             android:id="@+id/no_net_work_tips"
             android:layout_width="match_parent"
