Signed-off-by: Maxb <maxb@jyzblm.com>

--- a/app/src/main/res/layout/activity_manual_add_student.xml
+++ b/app/src/main/res/layout/activity_manual_add_student.xml
@@ -5,10 +5,11 @@
               android:orientation="vertical"
         >
 
-    <include
-            layout="@layout/layout_create_tips"
-            android:id="@+id/lay_tips"
-            />
+    <!--<include-->
+            <!--layout="@layout/layout_create_tips"-->
+            <!--android:id="@+id/lay_tips"-->
+            <!--android:visibility="gone"-->
+            <!--/>-->
 
     <LinearLayout
             android:id="@+id/edit_lay"
