--- a/app/src/main/res/layout/layout_my_course_search.xml
+++ b/app/src/main/res/layout/layout_my_course_search.xml
@@ -42,7 +42,8 @@
                 android:layout_gravity="center_vertical"
                 android:layout_marginRight="@dimen/px30"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+            android:gravity="center"
+                android:layout_height="match_parent"/>
     </LinearLayout>
 
     <View style="@style/DividerHorizontal"/>
