Signed-off-by: Maxb <maxb@jyzblm.com>

--- a/app/src/main/res/layout/fragment_mine.xml
+++ b/app/src/main/res/layout/fragment_mine.xml
@@ -332,7 +332,7 @@
                     android:textSize="@dimen/font_26px"
                     android:drawableLeft="@drawable/ic_share_my"
                     android:drawablePadding="@dimen/px20"
-                    android:text="@string/client_download_qrcode"/>
+                    android:text="@string/recommend_xiaojs"/>
 
 
             <ImageView
