--- a/app/src/main/res/layout/layout_full_screen_msg_item.xml
+++ b/app/src/main/res/layout/layout_full_screen_msg_item.xml
@@ -1,13 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+             android:id="@+id/talk_msg_info"
              android:layout_width="wrap_content"
-             android:layout_height="wrap_content">
+             android:layout_height="wrap_content"
+             android:paddingTop="@dimen/px5"
+             android:paddingBottom="@dimen/px5">
     <TextView
             android:id="@+id/msg_txt"
             android:textSize="@dimen/px24"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="#44000000"
+            android:background="@drawable/cr_corner_fc_talk_bg"
             android:paddingLeft="@dimen/px10"
             android:paddingRight="@dimen/px10"
             android:paddingTop="@dimen/px8"
