--- a/app/src/main/res/layout/layout_home_schedule.xml
+++ b/app/src/main/res/layout/layout_home_schedule.xml
@@ -40,7 +40,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:auto_change_month_row="true"
-        app:default_view="month">
+        app:default_view="week">
 
         <LinearLayout
             android:layout_width="match_parent"
