--- a/app/src/main/res/layout/item_native_lesson.xml
+++ b/app/src/main/res/layout/item_native_lesson.xml
@@ -64,7 +64,7 @@
         app:label_height="@dimen/px30"
         app:label_width="@dimen/px30"
         android:paddingRight="@dimen/px4"
-        android:src="@drawable/ic_share_wechat"
+        android:src="@drawable/default_avatar"
         app:labelSrc="@drawable/ic_speaker"
         app:label_position="LABEL_POSITION_RIGHT_BOTTOM"
         />
