Signed-off-by: Maxb <maxb@jyzblm.com>

--- a/app/src/main/res/layout/layout_classroom_panel_bottom_fc.xml
+++ b/app/src/main/res/layout/layout_classroom_panel_bottom_fc.xml
@@ -46,7 +46,7 @@
             android:paddingRight="@dimen/px30"
             android:paddingTop="@dimen/px20"
             android:paddingBottom="@dimen/px20"
-            android:layout_toLeftOf="@id/fc_open_talk_btn"
+            android:layout_toLeftOf="@+id/fc_open_talk_btn"
             android:src="@drawable/ic_cr_hide_talk"/>
 
     <ImageView
