加班验证bug,扫码加班刷新

--- a/app/src/main/res/layout/activity_students_list.xml
+++ b/app/src/main/res/layout/activity_students_list.xml
@@ -16,7 +16,7 @@
             android:paddingBottom="@dimen/px20"
             android:paddingLeft="@dimen/px25"
             android:paddingRight="@dimen/px25"
-            android:visibility="visible"
+            android:visibility="gone"
             >
 
         <ImageView
