--- a/app/src/main/res/layout/layout_classroom_sliding_setting.xml
+++ b/app/src/main/res/layout/layout_classroom_sliding_setting.xml
@@ -63,7 +63,8 @@
                     android:paddingRight="@dimen/px30"
                     android:paddingTop="@dimen/px30"
                     android:paddingBottom="@dimen/px30"
-                    android:orientation="horizontal">
+                    android:orientation="horizontal"
+                    android:visibility="gone">
 
                 <TextView
                         android:layout_width="wrap_content"
@@ -91,7 +92,8 @@
                     android:paddingRight="@dimen/px30"
                     android:paddingTop="@dimen/px30"
                     android:paddingBottom="@dimen/px30"
-                    android:orientation="horizontal">
+                    android:orientation="horizontal"
+                    android:visibility="gone">
 
                 <TextView
                         android:layout_width="wrap_content"
