--- a/app/src/main/res/layout/layout_common_dialog.xml
+++ b/app/src/main/res/layout/layout_common_dialog.xml
@@ -5,7 +5,7 @@
              android:layout_height="match_parent"
              android:paddingTop="50dp"
              android:paddingBottom="50dp"
-             android:clickable="true"
+             android:clickable="false"
              android:id="@+id/common_dialog_root">
 
     <LinearLayout
