--- a/app/src/main/res/layout/layout_student_name_num_item.xml
+++ b/app/src/main/res/layout/layout_student_name_num_item.xml
@@ -1,28 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="horizontal"
-              android:layout_width="match_parent"
-              android:layout_height="@dimen/px100"
-              android:layout_gravity="center_vertical"
-              android:padding="@dimen/px30"
-        >
+    android:layout_width="match_parent"
+    android:layout_height="@dimen/px100"
+    android:layout_gravity="center_vertical"
+    android:background="@color/white"
+    android:orientation="horizontal"
+    android:padding="@dimen/px30">
 
     <TextView
-            android:id="@+id/name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="@dimen/font_32px"
-            android:textColor="@color/font_black"
-            android:text="王海"
-            />
+        android:id="@+id/name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="王海"
+        android:textColor="@color/font_black"
+        android:textSize="@dimen/font_32px" />
 
     <TextView
-            android:id="@+id/phone"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="@dimen/font_28px"
-            android:textColor="@color/font_dark_gray"
-            android:layout_marginLeft="@dimen/px62"
-            android:text="1234567890"/>
+        android:id="@+id/phone"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="@dimen/px62"
+        android:text="1234567890"
+        android:textColor="@color/font_dark_gray"
+        android:textSize="@dimen/font_28px" />
 
 </LinearLayout>
