--- a/app/src/main/res/layout/layout_verification_class_msg_item.xml
+++ b/app/src/main/res/layout/layout_verification_class_msg_item.xml
@@ -30,6 +30,7 @@
             />
 
     <TextView
+        android:id="@+id/tv_verify_msg"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="@dimen/font_28px"
