调整学生列表ui

--- a/app/src/main/res/layout/activity_students_list.xml
+++ b/app/src/main/res/layout/activity_students_list.xml
@@ -46,7 +46,8 @@
             android:layout_height="@dimen/px34"
             android:textSize="@dimen/font_16px"
             android:textColor="@color/white"
-            android:layout_alignParentRight="true"
+            android:layout_toRightOf="@+id/veri_title"
+            android:layout_marginLeft="@dimen/px20"
             android:layout_centerVertical="true"
             android:gravity="center"
             android:background="@drawable/bg_red_circle_point"
