--- a/app/src/main/res/layout/activity_image_viewer.xml
+++ b/app/src/main/res/layout/activity_image_viewer.xml
@@ -30,4 +30,37 @@
             android:textColor="@color/white"
             />
 
+
+    <RelativeLayout
+        android:id="@+id/title_bar"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/px88"
+        android:background="@color/translucent_50"
+        android:visibility="gone"
+        >
+
+        <TextView
+            android:id="@+id/tv_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:textColor="@color/white"
+            android:textSize="@dimen/font_34px"
+            android:maxLines="1"
+            android:ellipsize="marquee"
+            android:layout_marginLeft="@dimen/px80"
+            android:layout_marginRight="@dimen/px80"
+            />
+
+        <ImageView
+            android:id="@+id/iv_back"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_image_back"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="@dimen/px35"
+            android:padding="@dimen/px5"
+            />
+    </RelativeLayout>
+
 </FrameLayout>
