--- a/app/src/main/res/layout/dialog_base_bottom.xml
+++ b/app/src/main/res/layout/dialog_base_bottom.xml
@@ -4,6 +4,18 @@
               android:layout_width="match_parent"
               android:layout_height="wrap_content">
 
+    <TextView
+        android:id="@+id/dialog_title"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:textSize="@dimen/font_26px"
+        android:textColor="@color/common_text"
+        android:padding="@dimen/px30"
+        android:layout_marginBottom="@dimen/px2"
+        android:visibility="gone"
+        />
+
     <ListView
             android:id="@+id/base_bottom_dialog_list"
             android:layout_marginBottom="@dimen/px20"
