图片查看器ui调整；搜索文案修改

--- a/app/src/main/res/layout/activity_image_viewer.xml
+++ b/app/src/main/res/layout/activity_image_viewer.xml
@@ -28,6 +28,11 @@
             android:layout_marginBottom="@dimen/px50"
             android:orientation="horizontal"
             android:textColor="@color/white"
+        android:paddingLeft="@dimen/px15"
+        android:paddingRight="@dimen/px15"
+        android:paddingTop="@dimen/px7"
+        android:paddingBottom="@dimen/px7"
+        android:background="@drawable/trans_50_half_circle"
             />
 
 
