--- a/app/src/main/res/layout/layout_search_result_class.xml
+++ b/app/src/main/res/layout/layout_search_result_class.xml
@@ -32,6 +32,7 @@
         android:layout_marginLeft="@dimen/px20"
         android:text="我的标题"
         android:layout_toRightOf="@+id/tv_label"
+        android:maxLines="1"
         android:textColor="@color/font_black"
         android:textSize="@dimen/font_34px" />
 
