--- a/app/src/main/res/layout/layout_search_result_live_lesson.xml
+++ b/app/src/main/res/layout/layout_search_result_live_lesson.xml
@@ -30,6 +30,7 @@
         android:layout_marginTop="@dimen/px30"
         android:layout_marginLeft="@dimen/px20"
         android:text="我的标题"
+        android:maxLines="1"
         android:layout_toRightOf="@+id/tv_label"
         android:textColor="@color/font_black"
         android:textSize="@dimen/font_34px" />
